<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UI.main.MainFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="@color/Black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/image_ar_tut"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/image_ar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/text_questions_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_amount"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_ar_tut" />

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/_10"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/text_questions_amount"
            app:layout_constraintLeft_toRightOf="@id/text_questions_amount" />

    </LinearLayout>


    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:haloRadius="15dp"
        app:labelBehavior="gone"
        android:valueTo="25"
        android:valueFrom="5"
        android:stepSize="1"
        app:layout_constraintTop_toBottomOf="@id/text_questions_amount"
        app:thumbColor="@color/BrightViolet"
        app:trackColorActive="@color/BrightViolet"
        app:trackColorInactive="@color/Gray_violet" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/slider" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:spinnerMode="dropdown"
        android:entries="@array/category"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/text_category"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_category" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:spinnerMode="dropdown"
        android:entries="@array/difficulty"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/text_difficulty"
        android:focusable="true" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:text="@string/start"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/spinner_difficulty" />


</LinearLayout>
